--- a/templates/home.html
+++ b/templates/home.html
@@ -64,7 +64,9 @@
 </head>
 <body class="font-sans bg-dark text-light">
 
-    <!-- Navigation Bar -->
+    <p>Hellow World</p>
+
+    Navigation Bar
     <nav class="bg-primary text-light p-4">
         <div class="container mx-auto flex flex-wrap items-center justify-between">
             <a href="#" class="flex items-center">
