Added New Things Again

--- a/templates/home.html
+++ b/templates/home.html
@@ -65,6 +65,7 @@
 <body class="font-sans bg-dark text-light">
 
     <p>Hellow World</p>
+    <p>Hello World As Well</p>
 
     Navigation Bar
     <nav class="bg-primary text-light p-4">
