--- a/templates/views/base.html
+++ b/templates/views/base.html
@@ -7,11 +7,16 @@
     <meta name="keywords" content="BYTEMAGUS, IT solutions, web development, computer support, network management, Philippines, software development, IT consultancy">
     <meta name="author" content="BYTEMAGUS CO.">
     <title>ByteMagus Co.</title>
+    <script
+    src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+    crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/general_styles.css') }}">
+
 </head>
 <body>
     {% block navbar %}{% endblock %}
