Added script src for contact_us_script.js

--- a/templates/views/base.html
+++ b/templates/views/base.html
@@ -23,5 +23,7 @@
     {% block banner %}{% endblock %}
     {% block content %}{% endblock %}
     {% block footer %}{% endblock %}
+
+<script src="{{ url_for('static', filename='js/contact_us_script.js') }}"></script>
 </body>
 </html>
