--- a/templates/views/section_contact-us.html
+++ b/templates/views/section_contact-us.html
@@ -1,4 +1,4 @@
-<section class="p-8">
+<section class="p-8" id="contact-us" style="z-index: 0;">
     <div class="flex items-center justify-center">
         <form action="" method="" id="contact-form" class="flex flex-col gap-12 w-full md:w-min main-form">
             <h1 class="font-bold md:text-5xl text-3xl lg:text-6xl">Contact Us!</h1>
@@ -27,7 +27,7 @@
                 <p class="text-2xl md:text-4xl lg:text-5xl">*Enter your message for us below</p>
                 <textarea name="sender_body" id="sender_body" required class="md:inline-block border-4 border-black h-72 text-xl contact-text-area md:text-2xl lg:text-4xl self-center lg:self-start"></textarea>
             </div>
-            <input type="submit" value="Submit Message" id="submit" name="submit" class="md:inline-block w-1/4 md:self-center self-center text-xl md:text-3xl p-4 bg-green-500 hover:bg-green-700 shadow-lg hover:text-white">
+            <input type="submit" value="Submit Message" id="submit" name="submit" class="md:inline-block w-full md:w-1/4 md:self-center self-center text-2xl md:text-3xl p-4 bg-green-500 hover:bg-green-700 shadow-md hover:text-white">
         </form>
     </div>
 </section>
