--- a/templates/views/section_main-footer.html
+++ b/templates/views/section_main-footer.html
@@ -1,3 +1,5 @@
 <footer>
-    <p>This is footer</p>
+    <div class="h-48" style="background-color: #458413; z-index: 0">
+        <p class="text-white text-center pt-10 font-bold text-lg md:text-3xl lg:text-4xl">©2024 BYTEMAGUS CO, All Rights Reserved</p>
+    </div>
 </footer>
