started working on the welcome banner

--- a/templates/views/section_welcome-banner.html
+++ b/templates/views/section_welcome-banner.html
@@ -1,3 +1,11 @@
-<section>
-    <p>WELCOME BANNER SECTION</p>
+<section id="home" class="" style="z-index: 0; height: 903px ">
+    <div>
+        <h1>We are ByteMagus Co.</h1>
+        <p>Building the Future Byte by Byte.</p>
+    </div>
+    <div>
+        <div>
+            <p>We offer software and network related<br /><span>services at a reasonable price.</span></p>
+        </div>
+    </div>
 </section>
