--- a/templates/views/base.html
+++ b/templates/views/base.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/general_styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/contact_form_styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/nav_bar_styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/welcome_banner_styles.css') }}">
 
 </head>
 <body>
