--- a/templates/views/section_contact-us.html
+++ b/templates/views/section_contact-us.html
@@ -1,22 +1,24 @@
 <section class="p-8" id="contact-us" style="z-index: 0;">
     <div class="flex items-center justify-center">
         <form action="" method="" id="contact-form" class="flex flex-col gap-12 w-full md:w-min main-form">
-            <h1 class="font-bold md:text-5xl text-3xl lg:text-6xl">Contact Us!</h1>
+            <h1 class="font-bold md:text-5xl text-3xl lg:text-4xl">Contact Us!</h1>
             <div>
-                <p class="md:inline-block text-2xl md:text-4xl lg:text-5xl">*Email:</p>
-                <input type="email" name="sender_email" id="sender_email" required class="md:inline-block border-b-4 border-black outline-none text-xl w-full md:w-96 lg:w-1/2 lg:text-4xl">
+                <p class="text-2xl md:text-3xl lg:text-3xl">*Email:</p>
+                <input type="email" name="sender_email" id="sender_email" required class=" border-b-4 border-black outline-none text-xl w-full md:w-full lg:text-2xl" placeholder="JuanDelaCruz@gmail.com">
+            </div>
+            <div class="xl:flex xl:w-full xl:justify-between xl:gap-8 ">
+                <div class="xl:w-full xl:pb-0 pb-10">
+                    <p class="text-2xl md:text-3xl lg:text-3xl">*Name: </p>
+                    <input type="text" name="sender_name" id="sender_name" class=" border-b-4 border-black outline-none text-xl w-full md:w-full lg:text-3xl" placeholder="Juan Dela Cruz" required>
+                </div>
+                <div class="xl:w-full">
+                    <p class=" text-2xl md:text-3xl lg:text-3xl">Contact No: </p>
+                    <input type="tel" name="sender_phone_no" id="sender_phone_no" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class=" border-b-4 border-black outline-none text-xl w-full md:w-full lg:text-3xl " placeholder="9XX-XXX-XXXX">
+                </div>
             </div>
             <div>
-                <p class="md:inline-block text-2xl md:text-4xl lg:text-5xl">*Name: </p>
-                <input type="text" name="sender_name" id="sender_name" class="md:inline-block border-b-4 border-black outline-none text-xl w-full md:w-96 lg:w-1/2 lg:text-4xl" required>
-            </div>
-            <div>
-                <p class="md:inline-block text-2xl md:text-4xl lg:text-5xl">Contact No: </p>
-                <input type="tel" name="sender_phone_no" id="sender_phone_no" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" class="md:inline-block border-b-4 border-black outline-none text-xl w-full md:w-96 lg:text-4xl lg:w-1/2">
-            </div>
-            <div>
-                <p class=" pb-10 text-2xl md:text-4xl lg:text-5xl">*What Services are you interested?</p>
-                <select name="sender_service_interested" id="sender_service_interested" class="border-b-4 border-black outline-none text-xl w-full  md:text-3xl md:w-auto lg:w-2/3 lg:text-4xl">
+                <p class=" pb-10 text-2xl md:text-3xl lg:text-3xl">*What Services are you interested?</p>
+                <select name="sender_service_interested" id="sender_service_interested" class="border-b-4 border-black outline-none text-xl w-full  md:text-3xl md:w-auto lg:w-full lg:text-3xl">
                     <option value="">--Select One--</option>
                     <option value="1">Web Systems Development and Designing</option>
                     <option value="2">Computer System Support and Management</option>
@@ -24,10 +26,10 @@
                 </select>
             </div>
             <div class="flex flex-col gap-8 ">
-                <p class="text-2xl md:text-4xl lg:text-5xl">*Enter your message for us below</p>
-                <textarea name="sender_body" id="sender_body" required class="md:inline-block border-4 border-black h-72 text-xl contact-text-area md:text-2xl lg:text-4xl self-center lg:self-start"></textarea>
+                <p class="text-2xl md:text-3xl lg:text-3xl">*Enter your message for us below</p>
+                <textarea name="sender_body" id="sender_body" required class=" border-4 border-black h-72 text-xl contact-text-area md:text-2xl lg:text-3xl self-center lg:self-start" style="text-indent: 1rem"></textarea>
             </div>
-            <input type="submit" value="Submit Message" id="submit" name="submit" class="md:inline-block w-full md:w-1/4 md:self-center self-center text-2xl md:text-3xl p-4 bg-green-500 hover:bg-green-700 shadow-md hover:text-white">
+            <input type="submit" value="Submit Message" id="submit" name="submit" class=" w-full md:w-max md:self-center self-center text-2xl md:text-3xl p-4 bg-green-500 hover:bg-green-700 shadow-md hover:text-white">
         </form>
     </div>
 </section>
