--- a/templates/views/section_welcome-banner.html
+++ b/templates/views/section_welcome-banner.html
@@ -1,11 +1,23 @@
-<section id="home" class="" style="z-index: 0; height: 903px ">
-    <div>
-        <h1>We are ByteMagus Co.</h1>
-        <p>Building the Future Byte by Byte.</p>
+<section id="home" class="flex flex-col mt-8 items-center gap-8 md:mt-0 md:p-8 md:gap-12 lg:gap-24 lg:p-16" style="z-index: 0;">
+    <div class="text-center flex flex-col gap-4">
+        <h1 class="text-3xl font-bold md:text-4xl lg:text-6xl">We are ByteMagus Co.</h1>
+        <p class="text-xl font-bold md:text-2xl md:text-3xl">Building the Future Byte by Byte.</p>
     </div>
-    <div>
-        <div>
-            <p>We offer software and network related<br /><span>services at a reasonable price.</span></p>
+    <div class="flex flex-col-reverse justify-center items-center gap-8 md:flex-row lg:gap-24">
+        <div class="flex flex-col gap-6">
+            <p class="text-xl text-center font-bold lg:text-3xl">We offer software and network related <br / class="invisible lg:visible"> <span>services at a reasonable price.</span></p>
+            <div class="flex flex-col justify-center text-center gap-2">
+                <p class="text-base lg:text-2xl">Visit us on our social media links</p>
+                <div class="flex justify-center gap-2">
+                    <button class="btn-3d facebook w-8 h-8 p-8 flex justify-center items-center"><i class="fab fa-facebook-f"></i></button>
+                    <button class="btn-3d twitter w-8 h-8 p-8 flex justify-center items-center"><i class="fab fa-twitter"></i></button>
+                    <button class="btn-3d instagram w-8 h-8 p-8 flex justify-center items-center"><i class="fab fa-instagram"></i></button>
+                    <button class="btn-3d linkedin w-8 h-8 p-8 flex justify-center items-center"><i class="fab fa-linkedin-in"></i></button>
+                    <button class="btn-3d youtube w-8 h-8 p-8 flex justify-center items-center"><i class="fab fa-youtube"></i></button>
+                </div>
+            </div>
         </div>
+        <img src="{{ url_for('static', filename='img/logo.png') }}" alt="" srcset="" class="w-60 md:w-72 lg:w-96 bg-black p-4 shadow-lg" style="border-radius: 100%">
+        
     </div>
 </section>
