Embedded company mascot svg in the banner

--- a/templates/views/section_welcome-banner.html
+++ b/templates/views/section_welcome-banner.html
@@ -10,14 +10,9 @@
                 <p class="text-base lg:text-2xl">Visit us on our social media links</p>
                 <div class="flex justify-center gap-2">
                     <button class="btn-3d facebook w-8 h-8 p-8 flex justify-center items-center"><i class="fab fa-facebook-f"></i></button>
-                    <button class="btn-3d twitter w-8 h-8 p-8 flex justify-center items-center"><i class="fab fa-twitter"></i></button>
-                    <button class="btn-3d instagram w-8 h-8 p-8 flex justify-center items-center"><i class="fab fa-instagram"></i></button>
-                    <button class="btn-3d linkedin w-8 h-8 p-8 flex justify-center items-center"><i class="fab fa-linkedin-in"></i></button>
-                    <button class="btn-3d youtube w-8 h-8 p-8 flex justify-center items-center"><i class="fab fa-youtube"></i></button>
                 </div>
             </div>
         </div>
-        <img src="{{ url_for('static', filename='img/logo.png') }}" alt="" srcset="" class="w-60 md:w-72 lg:w-96 bg-black p-4 shadow-lg" style="border-radius: 100%">
-        
+        <object type="image/svg+xml" data={{ url_for('static', filename='img/character3.svg') }} class="w-60 md:w-72 lg:w-96 p-4 "></object>
     </div>
 </section>
