--- a/static/css/general_styles.css
+++ b/static/css/general_styles.css
@@ -8,4 +8,5 @@ body{
     font-family: "Poppins", sans-serif;
     font-size: 30px;
     background-color: #ffffff;
+    transition: all ease-in 200ms;
 }
