--- a/templates/views/base.html
+++ b/templates/views/base.html
@@ -7,6 +7,14 @@
     <meta name="keywords" content="BYTEMAGUS, IT solutions, web development, computer support, network management, Philippines, software development, IT consultancy">
     <meta name="author" content="BYTEMAGUS CO.">
     <title>ByteMagus Co.</title>
+    <style>
+        
+        @media (min-width: 768px){
+            .mission-vision{
+                height: 450px;
+            }
+        }
+    </style>
     <script
     src="https://code.jquery.com/jquery-3.7.1.min.js"
     integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
