Added javascript src for carousel

--- a/templates/views/base.html
+++ b/templates/views/base.html
@@ -39,5 +39,6 @@
 <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 <script src="{{ url_for('static', filename='js/contact_us_script.js') }}"></script>
 <script src="{{ url_for('static', filename='js/nav_bar_script.js') }}"></script>
+<script src="{{ url_for('static', filename='js/carousel.js') }}"></script>    
 </body>
 </html>
