--- a/templates/views/base.html
+++ b/templates/views/base.html
@@ -7,39 +7,36 @@
     <meta name="keywords" content="BYTEMAGUS, IT solutions, web development, computer support, network management, Philippines, software development, IT consultancy">
     <meta name="author" content="BYTEMAGUS CO.">
     <title>ByteMagus Co.</title>
-    <style>
-        
-        @media (min-width: 300px){
-            .mission-vision{
-                height: 450px;
-            }
-        }
-    </style>
-    <script
-    src="https://code.jquery.com/jquery-3.7.1.min.js"
-    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-    crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;800&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/94d8d33acf.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/general_styles.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/contact_form_styles.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/nav_bar_styles.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/welcome_banner_styles.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/services_styles.css') }}">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base_styles.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/parallax.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/fly-magus.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/carousel.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/about_us.css') }}">
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
-    {% block navbar %}{% endblock %}
-    {% block banner %}{% endblock %}
-    {% block content %}{% endblock %}
-    {% block footer %}{% endblock %}
+    <header>
+        {% include 'views/section_navigator.html' %}
+    </header>
+    
+    <div class="w-full">
+        {% block content %}
+        {% endblock %}
+    </div>
 
-<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-<script src="{{ url_for('static', filename='js/contact_us_script.js') }}"></script>
-<script src="{{ url_for('static', filename='js/nav_bar_script.js') }}"></script>
-<script src="{{ url_for('static', filename='js/carousel.js') }}"></script>    
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <script src="{{ url_for('static', filename='js/burger.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/contact_us_script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/parallax.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/carousel.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@figmania/loader/build/index.umd.js"></script>
+    <footer>
+        {% include 'views/section_main-footer.html' %}
+    </footer>
 </body>
 </html>
